--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Ayush - Portfolio</title>
-<link rel="stylesheet" href="style.css"
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Ayush</h1>
