--- a/index.html
+++ b/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Ayush - Portfolio</title>
-<link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <title>Ayush - Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Ayush</h1>
-  <p>Hi, I’m Ayush — a student passionate about technology, learning, and building meaningful projects. I’m currently exploring AI, software development, and open source.</p>
+    <h1>Ayush</h1>
+    <p>Hi, I’m Ayush — a student passionate about technology, learning, and building meaningful projects. I’m currently exploring AI, software development, and open source.</p>
 
-  <h2>Skills & Interests</h2>
-  <ul>
-    <li>Artificial Intelligence</li>
-    <li>Web Development</li>
-    <li>Open Source</li>
-    <li>Learning New Technologies</li>
-  </ul>
+    <h2>Skills & Interests</h2>
+    <ul>
+        <li>Artificial Intelligence</li>
+        <li>Web Development</li>
+        <li>Open Source</li>
+        <li>Learning New Technologies</li>
+    </ul>
 
-  <h2>Find me online</h2>
-  <ul>
-    <li><a href="https://github.com/YOUR_USERNAME">GitHub</a></li>
-    <li><a href="https://linkedin.com/in/YOUR_PROFILE">LinkedIn</a></li>
-  </ul>
+    <h2>Find me online</h2>
+    <ul>
+        <li><a href="https://github.com/YOUR_USERNAME">GitHub</a></li>
+        <li><a href="https://linkedin.com/in/YOUR_PROFILE">LinkedIn</a></li>
+    </ul>
 </body>
 </html>
+
