--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <title>Ayush - Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-</head>
 <body>
     <h1>Ayush</h1>
     <p>Hi, I’m Ayush — a student passionate about technology, learning, and building meaningful projects. I’m currently exploring AI, software development, and open source.</p>
+
+    <nav>
+        <a href="index.html">Home</a> |
+        <a href="about.html">About</a> |
+        <a href="projects.html">Projects</a> |
+        <a href="contact.html">Contact</a>
+    </nav>
 
     <h2>Skills & Interests</h2>
     <ul>
@@ -23,5 +23,5 @@
         <li><a href="https://linkedin.com/in/YOUR_PROFILE">LinkedIn</a></li>
     </ul>
 </body>
-</html>
+
 
