--- a/about.html
+++ b/about.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <h1>About Me</h1>
-    <p>This is the About page of Ayush’s portfolio. Here you can write more about yourself, your education, and your journey.</p>
+  <p>
+I’m Ayush, a student and aspiring developer passionate about learning and creating technology that makes a difference. My journey began with curiosity about how computers work, and today I’m diving into fields like Artificial Intelligence, Web Development, and Open Source software. I believe in continuous learning and love to explore new tools and ideas that help me grow as a person and as a developer.
+</p>
+
 
     <nav>
         <a href="index.html">Home</a> |
