--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,18 @@
 </head>
 <body>
     <h1>My Projects</h1>
-    <p>This is the Projects page of Ayush’s portfolio. Here you can showcase the projects you have worked on, with links and descriptions.</p>
+<p>
+Here are a few of the projects I’ve worked on so far:
+</p>
+<ul>
+  <li><strong>Personal Portfolio Website:</strong> The site you’re viewing right now! Built with HTML and CSS, hosted on GitHub Pages.</li>
+  <li><strong>AI Chatbot Prototype:</strong> A simple chatbot built during my early experiments with artificial intelligence.</li>
+  <li><strong>Open Source Contributions:</strong> Small contributions to open source projects, learning by doing and collaborating.</li>
+</ul>
+<p>
+I’m excited to keep building and adding more projects here as I learn and grow.
+</p>
+
 
     <nav>
         <a href="index.html">Home</a> |
