--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,18 @@
 </head>
 <body>
     <h1>Contact Me</h1>
-    <p>This is the Contact page of Ayush’s portfolio. You can add your email address, social media links, or a contact form here.</p>
+  <p>
+I’d love to connect with you! Here’s how you can reach me:
+</p>
+<ul>
+  <li>Email: <a href="mailto:your-email@example.com">your-email@example.com</a></li>
+  <li>GitHub: <a href="https://github.com/ayush-girme">github.com/ayush-girme</a></li>
+  <li>LinkedIn: <a href="https://linkedin.com/in/YOUR_LINKEDIN">linkedin.com/in/YOUR_LINKEDIN</a></li>
+</ul>
+<p>
+Feel free to reach out for collaborations, questions, or just to say hi!
+</p>
+
 
     <nav>
         <a href="index.html">Home</a> |
