--- a/index.html
+++ b/index.html
@@ -1,27 +1,38 @@
 <body>
-    <h1>Ayush</h1>
-    <p>Hi, I’m Ayush — a student passionate about technology, learning, and building meaningful projects. I’m currently exploring AI, software development, and open source.</p>
+    <header>
+        <h1>Ayush</h1>
+        <p>Student • Developer • Explorer</p>
+    </header>
 
     <nav>
-        <a href="index.html">Home</a> |
-        <a href="about.html">About</a> |
-        <a href="projects.html">Projects</a> |
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="projects.html">Projects</a>
         <a href="contact.html">Contact</a>
     </nav>
 
-    <h2>Skills & Interests</h2>
-    <ul>
-        <li>Artificial Intelligence</li>
-        <li>Web Development</li>
-        <li>Open Source</li>
-        <li>Learning New Technologies</li>
-    </ul>
+    <main>
+        <h2>Welcome to my portfolio</h2>
+        <p>Hi, I’m Ayush — a student passionate about technology, learning, and building meaningful projects. I’m currently exploring AI, software development, and open source.</p>
 
-    <h2>Find me online</h2>
-    <ul>
-        <li><a href="https://github.com/YOUR_USERNAME">GitHub</a></li>
-        <li><a href="https://linkedin.com/in/YOUR_PROFILE">LinkedIn</a></li>
-    </ul>
+        <h2>Skills & Interests</h2>
+        <ul>
+            <li>Artificial Intelligence</li>
+            <li>Web Development</li>
+            <li>Open Source</li>
+            <li>Learning New Technologies</li>
+        </ul>
+
+        <h2>Find me online</h2>
+        <ul>
+            <li><a href="https://github.com/YOUR_USERNAME">GitHub</a></li>
+            <li><a href="https://linkedin.com/in/YOUR_PROFILE">LinkedIn</a></li>
+        </ul>
+    </main>
+
+    <footer>
+        © 2025 Ayush Girme • Built with 💻 and ☕
+    </footer>
 </body>
 
 
