--- a/about.html
+++ b/about.html
@@ -6,17 +6,26 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>About Me</h1>
-  <p>
-I’m Ayush, a student and aspiring developer passionate about learning and creating technology that makes a difference. My journey began with curiosity about how computers work, and today I’m diving into fields like Artificial Intelligence, Web Development, and Open Source software. I believe in continuous learning and love to explore new tools and ideas that help me grow as a person and as a developer.
-</p>
-
+    <header>
+        <h1>Ayush</h1>
+        <p>Student • Developer • Explorer</p>
+    </header>
 
     <nav>
-        <a href="index.html">Home</a> |
-        <a href="about.html">About</a> |
-        <a href="projects.html">Projects</a> |
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="projects.html">Projects</a>
         <a href="contact.html">Contact</a>
     </nav>
+
+    <main>
+        <h2>About Me</h2>
+        <p>I’m Ayush, a student and aspiring developer passionate about learning and creating technology that makes a difference. My journey began with curiosity about how computers work, and today I’m diving into fields like Artificial Intelligence, Web Development, and Open Source software. I believe in continuous learning and love to explore new tools and ideas that help me grow as a person and as a developer.</p>
+    </main>
+
+    <footer>
+        © 2025 Ayush Girme • Built with 💻 and ☕
+    </footer>
 </body>
 </html>
+
