--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+
+
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Ayush's Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
     <header>
         <h1>Ayush</h1>
@@ -34,5 +43,4 @@
         © 2025 Ayush Girme • Built with 💻 and ☕
     </footer>
 </body>
-
-
+</html>
