--- a/projects.html
+++ b/projects.html
@@ -6,25 +6,32 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>My Projects</h1>
-<p>
-Here are a few of the projects I’ve worked on so far:
-</p>
-<ul>
-  <li><strong>Personal Portfolio Website:</strong> The site you’re viewing right now! Built with HTML and CSS, hosted on GitHub Pages.</li>
-  <li><strong>AI Chatbot Prototype:</strong> A simple chatbot built during my early experiments with artificial intelligence.</li>
-  <li><strong>Open Source Contributions:</strong> Small contributions to open source projects, learning by doing and collaborating.</li>
-</ul>
-<p>
-I’m excited to keep building and adding more projects here as I learn and grow.
-</p>
-
+    <header>
+        <h1>Ayush</h1>
+        <p>Student • Developer • Explorer</p>
+    </header>
 
     <nav>
-        <a href="index.html">Home</a> |
-        <a href="about.html">About</a> |
-        <a href="projects.html">Projects</a> |
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="projects.html">Projects</a>
         <a href="contact.html">Contact</a>
     </nav>
+
+    <main>
+        <h2>My Projects</h2>
+        <p>Here are a few of the projects I’ve worked on so far:</p>
+        <ul>
+            <li><strong>Personal Portfolio Website:</strong> The site you’re viewing right now! Built with HTML and CSS, hosted on GitHub Pages.</li>
+            <li><strong>AI Chatbot Prototype:</strong> A simple chatbot built during my early experiments with artificial intelligence.</li>
+            <li><strong>Open Source Contributions:</strong> Small contributions to open source projects, learning by doing and collaborating.</li>
+        </ul>
+        <p>I’m excited to keep building and adding more projects here as I learn and grow.</p>
+    </main>
+
+    <footer>
+        © 2025 Ayush Girme • Built with 💻 and ☕
+    </footer>
 </body>
 </html>
+
