--- a/contact.html
+++ b/contact.html
@@ -6,25 +6,31 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Contact Me</h1>
-  <p>
-I’d love to connect with you! Here’s how you can reach me:
-</p>
-<ul>
-  <li>Email: <a href="mailto:your-email@example.com">your-email@example.com</a></li>
-  <li>GitHub: <a href="https://github.com/ayush-girme">github.com/ayush-girme</a></li>
-  <li>LinkedIn: <a href="https://linkedin.com/in/YOUR_LINKEDIN">linkedin.com/in/YOUR_LINKEDIN</a></li>
-</ul>
-<p>
-Feel free to reach out for collaborations, questions, or just to say hi!
-</p>
-
+    <header>
+        <h1>Ayush</h1>
+        <p>Student • Developer • Explorer</p>
+    </header>
 
     <nav>
-        <a href="index.html">Home</a> |
-        <a href="about.html">About</a> |
-        <a href="projects.html">Projects</a> |
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="projects.html">Projects</a>
         <a href="contact.html">Contact</a>
     </nav>
+
+    <main>
+        <h2>Contact Me</h2>
+        <p>I’d love to connect with you! Here’s how you can reach me:</p>
+        <ul>
+            <li>Email: <a href="mailto:your-email@example.com">your-email@example.com</a></li>
+            <li>GitHub: <a href="https://github.com/ayush-girme">github.com/ayush-girme</a></li>
+            <li>LinkedIn: <a href="https://linkedin.com/in/YOUR_LINKEDIN">linkedin.com/in/YOUR_LINKEDIN</a></li>
+        </ul>
+        <p>Feel free to reach out for collaborations, questions, or just to say hi!</p>
+    </main>
+
+    <footer>
+        © 2025 Ayush Girme • Built with 💻 and ☕
+    </footer>
 </body>
 </html>
