--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
         <h2>Contact Me</h2>
         <p>I’d love to connect with you! Here’s how you can reach me:</p>
         <ul>
-            <li>Email: <a href="mailto:ayush.girme@gmail.com">your-email@example.com</a></li>
+            <li>Email: <a href="mailto:ayush.girme@gmail.com">ayush.girme@gmail.com</a></li>
             <li>GitHub: <a href="https://github.com/ayush-girme">github.com/ayush-girme</a></li>
             <li>LinkedIn: <a href="https://linkedin.com/in/YOUR_LINKEDIN">linkedin.com/in/YOUR_LINKEDIN</a></li>
         </ul>
