--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
         <ul>
             <li>Email: <a href="mailto:ayush.girme@gmail.com">ayush.girme@gmail.com</a></li>
             <li>GitHub: <a href="https://github.com/ayush-girme">github.com/ayush-girme</a></li>
-            <li>LinkedIn: <a href="https://linkedin.com/in/YOUR_LINKEDIN">linkedin.com/in/YOUR_LINKEDIN</a></li>
+           <li>LinkedIn: <a href="https://linkedin.com/in/ayush-girme">linkedin.com/in/ayush-girme</a></li>
         </ul>
         <p>Feel free to reach out for collaborations, questions, or just to say hi!</p>
     </main>
