--- a/about.html
+++ b/about.html
@@ -20,6 +20,7 @@
 
     <main>
         <h2>About Me</h2>
+        <img src="https://via.placeholder.com/300" alt="Profile picture of Ayush" style="max-width: 200px; border-radius: 50%;">
         <p>I’m Ayush, a student and aspiring developer passionate about learning and creating technology that makes a difference. My journey began with curiosity about how computers work, and today I’m diving into fields like Artificial Intelligence, Web Development, and Open Source software. I believe in continuous learning and love to explore new tools and ideas that help me grow as a person and as a developer.</p>
     </main>
 
