--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
         <h2>Find me online</h2>
         <ul>
-            <li><a href="https://github.com/ayush-girme">GitHub</a></li>
-            <li><a href="https://linkedin.com/in/ayushgirme">LinkedIn</a></li>
+            <li><a href="https://github.com/ayush-girme">https://github.com/ayush-girme</a></li>
+            <li><a href="https://linkedin.com/in/ayushgirme">https://linkedin.com/in/ayushgirme</a></li>
         </ul>
     </main>
 
